--- a/apps/frontend/views/caro/documents/subpanels.twig
+++ b/apps/frontend/views/caro/documents/subpanels.twig
@@ -1,6 +1,9 @@
 <h3 id="subpanel-relation">Subpanel Relation</h3>
 
-<p>Edit $detail_view in Model</p>
+<p>You can use module builder</p>
+<pre>--> Module Builder --> Edit layouts --> Add panel</pre>
+
+<p>You can edit it in code: Edit $detail_view in backend/config/Model.conf.php</p>
 
 <p>Example: Users Model</p>
 
