--- a/apps/frontend/views/caro/layouts/default.twig
+++ b/apps/frontend/views/caro/layouts/default.twig
@@ -29,7 +29,7 @@
                 <br><br>
                 <p class="pull-right">
                     ©Copyright 2015 CaroDev<sup>TM</sup>. &nbsp;
-                    <a href="http://www.bootply.com">Template from Bootply</a>
+                    <a href="http://www.carodev.com">CaroDev.com</a>
                 </p>
                 <br><br>
             </div>
