--- a/apps/frontend/views/caro/documents/fields_type.twig
+++ b/apps/frontend/views/caro/documents/fields_type.twig
@@ -1,61 +1,23 @@
 <h3 id="field-type">Field type</h3>
+
+<p>We define field types in: backend/views/view_default/fields</p>
+
+<p>You can override or create new field type in: backend/views/view_customs/fields</p>
+
+<p>We have 3 view:</p>
 <ul>
-    <li>
-        text
-        <pre>
-            'example_field' => array (
-                'type' => 'text',
-                'label' => 'Name'
-            )
-        </pre>
-    </li>
-    <li>
-        select
-        <pre>
-            'example_field' => array (
-                'type' => 'select',
-                'label' => 'Name',
-                'options' => 'example_option'
-            )
-        </pre>
-        example_option define in apps/config/const.php
-        <pre>
-            return array(
-                'app_list_strings' => array(
-                    'example_option' => array(
-                        'Active' => 'Active',
-                        'Inactive' => 'Inactive'
-                    )
-                ),
-            );
-        </pre>
-    </li>
-    <li>
-        textarea
-        <pre>
-            'description' => array(
-                'type' => 'textarea',
-                'label' => 'Description'
-            )
-        </pre>
-    </li>
-    <li>
-        relate
-        <pre>
-            'category_id' => array(
-                'type' => 'relate',
-                'label' => 'Category',
-                'model' => 'Categories' // model name relate
-            )
-        </pre>
-    </li>
-    <li>
-        image
-        <pre>
-            'avatar' => array(
-                'type' => 'image',
-                'label' => 'Avatar'
-            )
-        </pre>
-    </li>
+    <li>list</li>
+    <li>detail</li>
+    <li>edit</li>
+</ul>
+
+<p>Field type base:</p>
+<ul>
+    <li>hidden: do not show</li>
+    <li>image: show image, allow upload a image file in edit view</li>
+    <li>multiimage: show multi image, allow upload multi image file in edit view</li>
+    <li>note: textarea</li>
+    <li>relate: relate with a other database table</li>
+    <li>select: choose in list value which define in config/const.php</li>
+    <li>textarea: textarea use Text Editor CKEditor</li>
 </ul>
