--- a/apps/frontend/views/caro/documents/start.twig
+++ b/apps/frontend/views/caro/documents/start.twig
@@ -1,7 +1,14 @@
 <h3 id="getting-started">Getting started</h3>
-<p>Go to source website. Example http://localhost/carofw/install</p>
+
+<p>Get CaroFramework</p>
+<pre>git clone https://github.com/teamcarodev/Caro-Framework.git</pre>
+
+<pre>Create database</pre>
+
+<pre>Go to source website. Example http://localhost/carofw/install</pre>
+
 <p>Fill all information</p>
-<pre><img src="{{ static_url() }}/themes/caro/images/documents/install.jpg" width="100%" /></pre>
+<pre><img src="{{ static_url() }}/themes/caro/images/documents/install.png" width="100%" /></pre>
 <p> </p>
 
 <p>
@@ -11,13 +18,8 @@
 <pre><img src="{{ static_url() }}/themes/caro/images/documents/login.jpg" width="100%" /></pre>
 <p> </p>
 
-<p>Go to settings, click repair</p>
-<pre><img src="{{ static_url() }}/themes/caro/images/documents/repair.jpg" width="100%" /></pre>
+<pre>Go to settings, click repair database</pre>
+<pre><img src="{{ static_url() }}/themes/caro/images/documents/repair.png" width="100%" /></pre>
 <p> </p>
 
-<h3 id="config-app">Application config</h3>
-<p>Go to apps/config/config.ini. Edit "baseUrl"</p>
-
-<h3 id="generate-database">Generate Database</h3>
-<p>Go to apps/config/database_structures.php</p>
-<p>Go to admin settings --> repair</p>
+<h3>Enjoy!</h3>
