custom partials for list/detail/edit

--- a/apps/backend/views/view_default/detail.twig
+++ b/apps/backend/views/view_default/detail.twig
@@ -19,6 +19,11 @@
 	</ol>
 </section>
 
+{#set path from path core#}
+{% if module_name %}
+    <?php $this->view->setPartialsDir('../../../views/'); ?>
+{% endif %}
+
 <section class="content">
     <div class="row">
         <div class="col-xs-12">
@@ -31,11 +36,6 @@
                                 <tr>
                                     <td width="33%"><b>{{ view['label'] }}</b></td>
                                     <td>
-                                        {#set path from path core#}
-                                        {% if module_name %}
-                                            <?php $this->view->setPartialsDir('../../../views/'); ?>
-                                        {% endif %}
-
                                         <?php if (is_file(APP_PATH . 'apps/backend/views/view_custom/fields/' . $view['type'] . '/detail.twig')) { ?>
                                             {{ partial('view_custom/fields/' ~ view['type'] ~ '/detail') }}
                                         <?php } else if (is_file(APP_PATH . 'apps/backend/views/view_default/fields/' . $view['type'] . '/detail.twig')) { ?>
@@ -104,4 +104,10 @@
             {% endif %}
         </div>
     </div>
+
+    {% if partials is defined and partials %}
+        {% for patial in partials %}
+            <div class="row">{{ partial(partial) }}</div>
+        {% endfor %}
+    {% endif %}
 </section>
