--- a/apps/backend/views/view_default/edit.twig
+++ b/apps/backend/views/view_default/edit.twig
@@ -13,6 +13,11 @@
     </ol>
 </section>
 
+{#set path from path core#}
+{% if module_name %}
+    <?php $this->view->setPartialsDir('../../../views/'); ?>
+{% endif %}
+
 <section class="content">
     <div class="row">
         <div class="col-md-12">
@@ -31,11 +36,6 @@
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label">{{ view['label'] }} {% if view['required'] is defined and view['required'] %}<span class="required">*</span>{% endif %}</label>
                                     <div class="col-sm-10">
-                                        {#set path from path core#}
-                                        {% if module_name %}
-                                            <?php $this->view->setPartialsDir('../../../views/'); ?>
-                                        {% endif %}
-
                                         <?php if (is_file(APP_PATH . 'apps/backend/views/view_custom/fields/' . $view['type'] . '/edit.twig')) { ?>
                                             {{ partial('view_custom/fields/' ~ view['type'] ~ '/edit') }}
                                         <?php } else if (is_file(APP_PATH . 'apps/backend/views/view_default/fields/' . $view['type'] . '/edit.twig')) { ?>
@@ -59,4 +59,10 @@
             </div>
         </div>
     </div>
+
+    {% if partials is defined and partials %}
+        {% for patial in partials %}
+            <div class="row">{{ partial(partial) }}</div>
+        {% endfor %}
+    {% endif %}
 </section>
