--- a/apps/backend/views/view_default/detail.twig
+++ b/apps/backend/views/view_default/detail.twig
@@ -4,7 +4,7 @@
         {{ title }}
     </h1>
 	<ol class="breadcrumb">
-        <li><a href="{{ url('/'~carofw['backendUrl']~'/'~controller) }}" class="btn btn-default btn-xs">{{ t._('List') }}</a></li>
+        <li><a href="{{ url('/'~carofw['backendUrl']~'/'~controller~'/'~action_list) }}" class="btn btn-default btn-xs">{{ t._('List') }}</a></li>
 		<li><a href="{{ url('/'~carofw['backendUrl']~'/'~controller~'/'~action_edit~'/'~data.id) }}" class="btn btn-default btn-xs">{{ t._('Edit') }}</a></li>
 		{% if link_detail %}
 			{% for link in link_detail %}
