--- a/apps/backend/views/view_default/detail.twig
+++ b/apps/backend/views/view_default/detail.twig
@@ -82,7 +82,7 @@
                                 </thead>
 
                                 <tbody>
-                                {% for row in subpanels[subpanel_name] %}
+                                {% for row in subpanels[subpanel_name].items %}
                                     <tr>
                                         {% for name, view in subpanel_def['list'] %}
                                             <td>{{ row.readAttribute(name) }}</td>
@@ -98,6 +98,30 @@
                                 {% endfor %}
                                 </tbody>
                             </table>
+                        </div>
+                        <div class="box-footer">
+                            <!-- pagination -->
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <div class="dataTables_info">
+                                        <ul class="pagination" style="margin: 0; float: right">
+                                            <li class="paginate_button previous"><a href="{{ current_url }}">First</a></li>
+                                            <li class="paginate_button previous"><a href="{{ current_url }}&page={{ subpanels[subpanel_name].before }}">Previous</a></li>
+                                            <li class="paginate_button">
+                                                <a href="javascript:;" style="">
+                                                    <select style="margin: 0; width: auto;" onchange="location.href='{{ current_url }}&page=' + $(this).val();">
+                                                        {% for i in 1..subpanels[subpanel_name].total_pages %}
+                                                            <option{% if subpanels[subpanel_name].current == i %} selected{% endif %}>{{ i }}</option>
+                                                        {% endfor %}
+                                                    </select>
+                                                </a>
+                                            </li>
+                                            <li class="paginate_button next"><a href="{{ current_url }}&page={{ subpanels[subpanel_name].next }}">Next</a></li>
+                                            <li class="paginate_button next"><a href="{{ current_url }}&page={{ subpanels[subpanel_name].last }}">Last</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 {% endfor %}
