dynamic theme for backend extension json data

--- a/apps/backend/views/caro/view_default/list.twig
+++ b/apps/backend/views/caro/view_default/list.twig
@@ -19,7 +19,7 @@
 
 {#set path from path core#}
 {% if module_name %}
-    <?php $this->view->setPartialsDir('../../../views/'); ?>
+    <?php $this->view->setPartialsDir('../../../../views/' . $theme . '/'); ?>
 {% endif %}
 
 <section class="content">
