--- a/apps/backend/views/caro/view_default/edit.twig
+++ b/apps/backend/views/caro/view_default/edit.twig
@@ -15,7 +15,7 @@
 
 {#set path from path core#}
 {% if module_name %}
-    <?php $this->view->setPartialsDir('../../../views/'); ?>
+    <?php $this->view->setPartialsDir('../../../../views/' . $theme . '/'); ?>
 {% endif %}
 
 <section class="content">
